# httpz

./: .gitignore  Cargo.toml  README.md  TODO
.github/workflows/: audit.yml  ci.yml  clippy.yml  upgrade-dependencies.yml
_/: DUMP
_/servers/: axum.rs  mod.rs  tauri.rs
crates/actix-web/: Cargo.toml
crates/axum/: Cargo.toml
crates/cf-workers/: Cargo.toml
crates/hyper/: Cargo.toml
crates/lambda/: Cargo.toml
crates/poem/: Cargo.toml
crates/rocket/: Cargo.toml
crates/tauri/: Cargo.toml
crates/vercel/: Cargo.toml
crates/warp/: Cargo.toml
examples/: actix-web.rs  axum_with_state.rs  basic.rs  cookies.rs  websocket.rs
examples/cf-workers/: Cargo.toml  wrangler.toml
examples/cf-workers/src/: lib.rs
examples/netlify/: netlify.toml
examples/netlify/netlify/functions/demo/: Cargo.toml
examples/netlify/netlify/functions/demo/src/: main.rs
examples/netlify/public/: index.html
examples/tauri/: Cargo.toml  tauri.conf.json
examples/tauri/public/: index.html
examples/tauri/src/: main.rs
examples/vercel/: Cargo.toml  package.json
examples/vercel/api/: simple.rs
src/: endpoint.rs  error.rs  generic_endpoint.rs  lib.rs  request.rs  response.rs  server.rs  ws.rs
src/servers/: actix_web.rs  axum.rs  lambda.rs  mod.rs  tauri.rs  vercel.rs  workers.rs
src/ws/: fallback_ws.rs  message.rs  mod.rs  tokio_ws.rs  websocket.rs
tests/: axum.rs  utils.rs
