[package]
name = "httpz"
version = "0.0.4"
description = "Code once, support every Rust webserver!"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/httpz"
documentation = "https://docs.rs/httpz"
repository = "https://github.com/oscartbeaumont/httpz"
readme = "README.md"

keywords = ["httpz", "async", "web", "http", "websockets"]
categories = ["network-programming", "web-programming", "web-programming::http-server", "asynchronous", "development-tools"]

[[example]]
name = "basic"
required-features = ["axum"]

[[example]]
name = "actix-web"
required-features = ["actix-web"]

[features]
default = []
cookies = ["dep:cookie"] # TODO: Support for signed and/or encrypted cookies
ws = []

# Async runtimes
async-tungstenite = [] # TODO: Remove this?
tokio-ws = ["dep:async-tungstenite", "async-tungstenite/tokio-runtime", "dep:sha1", "dep:base64", "dep:tokio", "ws"]  # TODO: This feature shouldn't force tokio as the async runtime
# TODO: Support other async runtimes

# Webservers
axum = ["dep:axum"]
hyper = [] # TODO: "dep:hyper"
actix-web = ["dep:actix-web"]
poem = ["dep:poem"]
rocket = ["dep:rocket"]
warp = ["dep:warp"]
lambda = ["dep:lambda_http", "dep:tower"]
workers = ["dep:worker"]
tauri = ["dep:tauri", "dep:percent-encoding", "dep:tokio"] # TODO: Remove tokio dep once my wry & Tauri PR's are merged

[dependencies]
# Webservers
actix-web = { version = "4.2.1", optional = true, features = [] }
axum = { version = "0.6.1", optional = true, features = [] }
poem = { version = "1.3.45", optional = true, features = [] }
rocket = { version = "0.5.0-rc.2", optional = true, features = [] }
warp = { version = "0.3.3", optional = true, features = [] }
lambda_http = { version = "0.7.2", optional = true, features = [] }
tower = { version = "0.4.13", optional = true, features = [] }
worker = { version = "0.0.12", optional = true, features = [] }
tauri = { version = "1.2.4", optional = true, features = ["linux-protocol-headers"] }

# Core
cookie = { version = "0.16.1", optional = true, features = ["percent-encode"] }
http = { version = "0.2.8", features = [] }
form_urlencoded = "1.1.0"
async-tungstenite = { version = "0.19.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
base64 = { version = "0.20.0", optional = true }
tokio = { version = "1.21.2", features = [], default-features = false, optional = true }
hyper = "0.14.20" # TODO: Remove this if possible or feature gate it. I think Axum needs it.
futures = "0.3.24"
thiserror = "1.0.37"
percent-encoding = { version = "2.2.0", optional = true, features = [] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
axum = { version = "0.6.1", features = [] }
tower = { version = "0.4.13", features = [] }
hyper = { version = "0.14.20", features = [] }
actix-web = "4.2.1"

[workspace]
members = [
    "./examples/cf-workers",
    "./examples/netlify/netlify/functions/demo",
    "./examples/tauri"
]
